--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -2,11 +2,13 @@ html,body {
     height:100%;
 }
 
+.story-root,
 .stories-root,
 .home-root {
     height:100%;
 }
 
+.story-root .row,
 .stories-root .row,
 .home-root .row {
     height:100%;
@@ -145,4 +147,28 @@ html,body {
 
 .tpi-carousel-indicators {
     margin: 0;
+}
+
+.tpi-next-icon,
+.tpi-prev-icon {
+    width: 40px !important;
+    height: 40px !important;
+    background-color: #ef8907 !important;
+    border-radius: 50%;
+}
+
+.carousel-indicators .active {
+    background-color: #ef8907;
+}
+
+.story-background {
+    background: url("../img/story_background.png");
+    background-size:     cover;                      /* <------ */
+    background-repeat:   no-repeat;
+    background-position: center center; 
+    margin: 4rem;   
+}
+
+.story-background .row {
+    padding: 4rem;
 }
